--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Css</title>
-	<link rel="stylesheet" href="Style.css" type="text/css">
+	<link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
 	<div class="box">
